Set version to 0.100.3

--- a/jade/page-contents/forms_content.html
+++ b/jade/page-contents/forms_content.html
@@ -785,7 +785,7 @@
     clear: 'Clear',
     close: 'Ok',
     closeOnSelect: false // Close upon selecting a date,
-    container: undefined, // ex. 'body' will append picker to body
+    container: 0.100.3, // ex. 'body' will append picker to body
   });
         </code></pre>
       </div>
